less/bootstrap-theme/panels.less
//
// Panels
// --------------------------------------------------

.panel {
    .box-shadow(@panel-shadow);

    .panel-actions {
        float: right;
        max-width: 68%;
        text-align: right;

        > .btn {
            margin: 2px;
            padding: 6px 12px;
            min-width: 34px;

            &.btn-xs {
                padding: 1px 5px;
                min-width: 22px;
            }

            &.btn-sm {
                padding: 4px 9px;
                min-width: 28px;
            }

            &.btn-lg {
                padding: 10px 16px;
                min-width: 46px;
            }
        }
    }

    > .panel-heading,
    > .panel-footer {
        border-color: @panel-inner-border;

        > .panel-actions {
            padding: 10px 0;
            line-height: ceil((@font-size-base * 1.125));
        }

        > .panel-buttons {
            margin: 10px -16px;
            background-color: darken(@panel-bg, 1%);

            > .nav-scrollable {
                > .nav-btn-group {
                    white-space: nowrap;
                    display: inline-block;
                    padding: 10px;
                }

                > .nav-scrollable-menu > * {
                    margin: 10px 0;
                }
            }

            > .btn,
            > .btn-group > .btn,
            > .nav-scrollable > .nav-btn-group > .btn,
            > .nav-scrollable > .nav-btn-group > .btn-group > .btn {
                margin: 5px 2px;

                &:first-child {
                    margin-left: 2px;
                }

                &:last-child {
                    margin-right: 2px;
                }
            }
        }
    }

    > .panel-heading {
        &:last-child {
            border-bottom: none;
        }

        > .clearfix {
            height: 0;
        }

        > .panel-actions {
            margin-top: -16px;
            margin-right: -12px;
        }

        > .panel-buttons {
            border-top: 1px solid @panel-inner-border;
            border-bottom: 1px solid @panel-inner-border;

            &:first-child {
                border-top: none;
                margin-top: -11px;
                .border-top-radius(@panel-border-radius);

                > .nav-scrollable {
                    .border-top-radius(@panel-border-radius);
                }
            }

            &:last-child {
                border-bottom: none;
                margin-bottom: -10px;
            }
        }
    }

    > .panel-footer {
        > .panel-buttons {
            border-top: 1px solid @panel-inner-border;
            border-bottom: 1px solid @panel-inner-border;

            &:first-child {
                border-top: none;
                margin-top: -10px;
            }

            &:last-child {
                border-bottom: none;
                margin-bottom: -11px;
                .border-bottom-radius(@panel-border-radius);

                > .nav-scrollable {
                    .border-bottom-radius(@panel-border-radius);
                }
            }
        }
    }

    > .panel-section {
        > .panel-section-heading {
            padding: 10px 15px;

            > .panel-actions {
                padding: 7px 0;
                margin-top: -10px;
                margin-right: -15px;
                line-height: ceil((@panel-section-heading-size * 1.125));
            }

            > .panel-section-title {
                color: @panel-section-heading-color;
            }

            + .panel-body {
                padding-top: 0;
                padding-left: 0;
                padding-right: 0;
            }
        }

        + .panel-section {
            margin-top: 15px;

            > .panel-section-heading {
                border-top: 1px dashed @panel-inner-border;
            }
        }

        &.panel-collapsed {
            > *:not(.panel-section-heading) {
                display: none;
            }

            > .panel-section-heading {
                > .panel-actions {
                    > .btn-panel-collapse {
                        .caret {
                            .rotate(90deg);
                        }
                    }
                }
            }
        }

        &.container,
        &.container-fluid {
            > .panel-section-heading {
                margin-left: -15px;
                margin-right: -15px;
            }
        }
    }

    > .alert {
        margin: 10px;
    }

    .panel-row {
        margin-bottom: 15px;

        + .panel-row {
            border-top: 1px solid @panel-inner-row-border;
        }

        &.panel-row-spacer {
            min-height: @input-height-base;
        }

        &:last-child {
            margin-bottom: 10px;
        }
    }

    .panel-cell {
        > .panel-cell-wrapper {
            display: table;
            width: 100%;

            > .control-label {
                display: table-cell;
                vertical-align: top;
                width: 110px;
                text-align: right;
                margin-top: 0;
                margin-bottom: 0;
                padding-top: 10px;
                padding-bottom: 10px;
                padding-right: 6px;

                &.required:after {
                    top: 5px;
                    margin-left: -1px;
                    font-size: 14px;
                }

                + .block-control {
                    padding-left: 16px;
                }
            }

            > .block-control {
                display: table-cell;
                vertical-align: top;
                width: auto;
                padding-top: 10px;
                padding-bottom: 10px;

                &.block-repeated {
                    padding-top: 0;

                    .form-group {
                        margin-bottom: 10px;

                        .control-label {
                            font-size: 11px;
                        }
                    }
                }

                > .form-control,
                > .checkbox,
                > .radio {
                    margin-top: -10px;
                }

                .form-group {
                    margin-top: 10px;
                }

                .form-collection-row {
                    margin-top: 0;
                }

                .btn.btn-add {
                    margin-top: 6px;
                }
            }

            > .panel-block-help {
                display: table-cell;
                vertical-align: top;
                width: 16px;
                text-align: right;
                padding-top: 9px;
                padding-right: 2px;

                > .panel-cell-help {
                    padding: 0 3px;
                    z-index: 1;
                    min-width: 1px;
                }
            }
        }
    }

    .panel-cell-spacer {
        > div[class*="col-"] {
            min-height: @input-height-base + 6px;
        }
    }

    .table {
        margin-bottom: 0;
    }
}

.panel-title {
    font-size: @panel-heading-size;
}

.panel-section-title {
    font-size: @panel-section-heading-size;
    line-height: ceil((@panel-section-heading-size * 1.125));
    margin: 0;
}

.panel-table {
    .panel-body {
        padding: 0;
    }
}

// Contextual variations
.panel-accent {
    .panel-variant(@panel-accent-border; @panel-accent-text; @panel-accent-heading-bg; @panel-accent-border);
}

.panel {
    &.panel-default,
    &.panel-primary,
    &.panel-accent,
    &.panel-success,
    &.panel-info,
    &.panel-warning,
    &.panel-danger {
        > .panel-heading {
            border-color: @panel-inner-border;

            .panel-actions {
                color: @text-color;
            }
        }
    }
}

@media (max-width: (@screen-xs-min - 1)) {
    .panel {
        > .panel-section {
            > .panel-row {
                > .panel-cell {
                    > .panel-cell-wrapper {
                        display: block;

                        > .control-label {
                            display: inline-block;
                            width: auto;
                            text-align: left;

                            + .block-control {
                                padding-left: 0;
                            }
                        }

                        > .block-control {
                            display: block;
                            width: 100%;
                        }

                        > .panel-block-help {
                            display: inline-block;
                        }
                    }
                }
            }
        }
    }
}

@media screen and (max-width: @screen-xs-max) {
    .panel {
        .table-responsive {
            margin-bottom: 0;
            border: none;
        }
    }
}

@media (max-width: @screen-sm-max) {
    .col-xs-12,
    .col-sm-12,
    .col-md-12,
    .col-lg-12 {
        > .panel {
            &.panel-main {
                margin-left: -(ceil((@grid-gutter-width / 2)));
                margin-right: -(floor((@grid-gutter-width / 2)));
            }
        }
    }
}

@media (min-width: @screen-sm-min) {
    // fix vertical align of last cell
    .panel-cell {
        &:last-child {
            margin-top: -5px;
        }
    }
}


// Variantes
// -------------------------

.panel-variant-box(primary, @brand-primary, @brand-primary, lighten(@brand-primary, 3%), #fff);
.panel-variant-box(accent, @brand-accent, @brand-accent, lighten(@brand-accent, 3%), #fff);
.panel-variant-box(success, @brand-success, @brand-success, lighten(@brand-success, 3%), #fff);
.panel-variant-box(info, @brand-info, @brand-info, lighten(@brand-info, 3%), #fff);
.panel-variant-box(warning, @brand-warning, @brand-warning, lighten(@brand-warning, 3%), #fff);
.panel-variant-box(danger, @brand-danger, @brand-danger, lighten(@brand-danger, 3%), #fff);

.panel-variant-top(default, @brand-primary, @panel-top-border-height);
.panel-variant-top(primary, @brand-primary, @panel-top-border-height);
.panel-variant-top(accent, @brand-accent, @panel-top-border-height);
.panel-variant-top(success, @brand-success, @panel-top-border-height);
.panel-variant-top(info, @brand-info, @panel-top-border-height);
.panel-variant-top(warning, @brand-warning, @panel-top-border-height);
.panel-variant-top(danger, @brand-danger, @panel-top-border-height);

.panel-variant-wire(default, @text-color);
.panel-variant-wire(primary, @brand-primary);
.panel-variant-wire(accent, @brand-accent);
.panel-variant-wire(success, @brand-success);
.panel-variant-wire(info, @brand-info);
.panel-variant-wire(warning, @brand-warning);
.panel-variant-wire(danger, @brand-danger);

.panel-variant-frame(default, @text-color);
.panel-variant-frame(primary, @brand-primary);
.panel-variant-frame(accent, @brand-accent);
.panel-variant-frame(success, @brand-success);
.panel-variant-frame(info, @brand-info);
.panel-variant-frame(warning, @brand-warning);
.panel-variant-frame(danger, @brand-danger);

.panel-variant-lite(default, @text-color);
.panel-variant-lite(primary, @brand-primary);
.panel-variant-lite(accent, @brand-accent);
.panel-variant-lite(success, @brand-success);
.panel-variant-lite(info, @brand-info);
.panel-variant-lite(warning, @brand-warning);
.panel-variant-lite(danger, @brand-danger);

.panel-variant-label(default, @text-color);
.panel-variant-label(primary, @brand-primary);
.panel-variant-label(accent, @brand-accent);
.panel-variant-label(success, @brand-success);
.panel-variant-label(info, @brand-info);
.panel-variant-label(warning, @brand-warning);
.panel-variant-label(danger, @brand-danger);

